@startuml
title Chat Models Class Diagram

class Message {
  +content: str
  +role: str
  +metadata: Dict
}

class IChatRequest {
  +message: str
  +conversation_flow: str
  +user_id: str
  +thread_id: str
}

class ChatRequest {
  +message: str
  +conversation_flow: str
  +user_id: str
  +thread_id: str
  +thread_chat_history: List[Dict]
}

class IChatResponse {
  +agent_response: str
  +thread_id: str
  +message_id: str
  +token_count: int
  +max_token_count: int
}

class ChatResponse {
  +agent_response: str
  +thread_id: str
  +message_id: str
  +token_count: int
  +max_token_count: int
  +topic: str
  +memory_summary: str
  +followup_questions: List[str]
  +event_type: str
}

class ChatResponseChunk {
  +thread_id: str
  +message_id: str
  +chunk_type: str
  +content: str
  +token_count: int
  +is_final: bool
}

class MessageFeedbackRequest {
  +message_id: str
  +thread_id: str
  +user_id: str
  +positive_feedback: bool
}

class MessageFeedbackResponse {
  +message: str
}

IChatRequest <|-- ChatRequest
IChatResponse <|-- ChatResponse

@enduml
